# dotfiles

./: .gitattributes  .gitignore  .stow-local-ignore  .sync_50f23413fb4b.db-wal  .zshrc  .zshrc.pre-oh-my-zsh  README.md  ani-cli-ru.nix  archive.sh  clean_prev.sh  complete.sh  configuration.nix  flake.nix  pull.sh  result  start.sh  start_dont_touch_it.sh  token.txt  update.sh
.config/: kdeglobals  mimeapps.list  pavucontrol.ini
.config/Kvantum/: kvantum.kvconfig
.config/Kvantum/Flight-Dark-Kvantum/: Flight-Dark-Kvantum.kvconfig
.config/Kvantum/Sweet-transparent-toolbar/: Sweet-transparent-toolbar.kvconfig
.config/Soundux/: config.json
.config/Thunar/: uca.xml
.config/btop/: btop.conf
.config/cava/: config
.config/cloudflare/: cloudflare2.conf  update-cloudflare-dns.conf
.config/dconf/: user
.config/dunst/: dunstrc  dunstrc3
.config/fastfetch/: config.jsonc  nixos.sh
.config/firejail/: untrusted.profile
.config/flameshot/: flameshot.ini
.config/gtk-3.0/: bookmarks  settings.ini
.config/hypr/: gamemode.sh  hyprland.conf  hyprlock.conf  hyprpaper.conf  killin.sh  minecraft.sh  nohup.out  sheesh.sh  ulauncher.sh  wall.sh  ytfzf.sh  ytstart.sh
.config/hypr/process-wallpaper/: config.json  setWallpaper.sh  top.out  wallpaper.sh
.config/i3/: config
.config/kde.org/: UserFeedback.org.kde.dolphin.conf
.config/keepassxc/: keepassxc.ini
.config/kitty/: current-theme.conf  kitty.conf  kitty.conf.bak
.config/lutris/: lutris.conf
.config/lutris/games/: ak-xolotl-setup-1702669732.yml  cosmoteer-setup-1700413873.yml  dont-starve-together-steam-1701967063.yml  ea-app-standard-1699829865.yml  epic-games-store-standard-1701687516.yml  farming-simulator-22-setup-1702565012.yml  flatout-2-1700597286.yml  grand-theft-auto-v-rockstar-games-launc-1702740577.yml  jackbox-party-packs-1699894389.yml  prototype-1-setup-1702476267.yml  ravenfield-1702554294.yml  steam-105600-1701688152.yml  (+6 more)
.config/mpd/: mpd.conf
.config/ncmpcpp/: config
.config/networkmanager-dmenu/: config.ini
.config/nvim/: ginit.vim.bak  init.vim
.config/qBittorrent/: qBittorrent-data.conf  qBittorrent.conf
.config/swaylock/: config
.config/swaync/: config.json  style.css
.config/tofi/: config  config.bak
.config/vlc/: vlc-qt-interface.conf  vlcrc
.config/waybar/: colors.css  config  style.css  style.css.bak  style1.css  workspace.pacman.bak
.config/wlogout/: layout  layout.bak  style.css  style.css.backup
.config/wofi/: style.css
.config/yadm/: bootstrap
.github/workflows/: iso.yml  iso8G.yml  isoMIN.yml  sync.yml
.icons/Infinity-Dark-Icons/: index.theme
.icons/default/: index.theme
backup/: .zshenv  .zshrc
iso/: configuration.nix
machines/iso/: configuration.nix  home.nix
machines/iso8G/: configuration.nix  home.nix
machines/isoMIN/: configuration.nix  home.nix
machines/laptop/: configuration.nix  hardware-configuration.nix  home.nix
machines/nixos/: conf.nix  configuration.nix  disks.nix  hardware-configuration.nix  home-configuration.nix  home-options.nix  home-root.nix  home.nix  hyprland.nix  kitty.nix  zsh.nix
machines/nixos-offline/: configuration.nix
modules/home/: default.nix
modules/system/: default.nix
modules/system/cape/nix_workspace/: pyproject.toml
nixos/: README.md  ani-cli-ru.nix  anicli-api.nix  btop.nix  cava.nix  chompjs.nix  configuration.nix  disks.nix  eggella.nix  fastfetch.nix  flake.nix  hardware-configuration.nix  home.nix  hyprland.nix  init.vim  linux-wallpaperengine.nix  my-services.nix  stuff.nix  swaync.nix  theme.rasi  user.nix  waybar-scripts.nix  waybar.nix  zsh.nix
nixos/nixos/: anicli-api.nix  configuration.nix  my-services.nix  waybar.nix  zsh.nix
nixos/stuff/: init.vim
stuff/: Transparent.colors  android.ini  bookmarks.html  bridge.rs  discord-hosts  fan-control.c  firefox.patch  fix_ksu_susfs.patch  fix_syscalls.patch  graphrc  hazy.patch  init.vim  landlock.c  monado.patch  monado_debug.patch  nixpkgs.tar.zst  nom.patch  nos.patch  nv-blindfold.c  prepare_umu.c  prismlauncher.patch  prompt.py  steamrt3.json  steamrt4.json  stop.sh  stuff.kdbx  temp_fix_hyprland.patch  test.py  theme.rasi  uwsm_uuctl.patch  vencord-sth.xpi  way-secure.patch  wivrn_debug.patch  youtube-hosts  zapret.txt
stuff/Bibata-Modern/: README.txt  VERSION  cursor.theme  index.theme
stuff/Kvantum/: kvantum.kvconfig
stuff/mpv/: input.conf  mpv.conf
stuff/networkmanager-dmenu/: config.ini
stuff/patches/: 0001-use-system-deps-open-wallpaper-engine.patch  0001-use-system-deps-waywallen.patch  amneziawg.patch  fluent.patch  xrizer.patch
stuff/patches_unused/: detnix.patch  fix_susfs.patch  monado_test.patch  nos.patch
stuff/qimgv/: qimgv.conf  theme.conf
stuff/qt5ct/: qt5ct.conf
stuff/qt6ct/: qt6ct.conf  style-colors.conf
stuff/scripts/: amd-gpu.sh  check-follows.py  cpu-temp.sh  dinfo.sh  dmenu.sh  fetch-latest-nightly.py  finder.sh.sh  gamemode.sh.sh  nixos.sh  nixos.sh.sh  notify_trunc.py  nvidia-gpu.sh  power-menu.py  power-menu.sh  prepare_ksu_graphene_caimito.sh  qemu-system-x86_64-uefi.sh  sheesh.sh.sh  singbox-control.py  startup-sound.sh  translate-zapret-nixos.sh  translate-zapret.sh  update-cloudflare-dns.sh  update-damn-nixos.sh
stuff/singbox/: config_template  config_template-wg.json  config_template.json  sing-box-vpn.json  vpn-run-root.sh
stuff/vesktop/: settings.json
stuff/vpn-toggler/: background.js  manifest.json
(+290 files in other folders)
